# cmake-project-template-cpp

./: .gitignore  CMakeLists.txt  README.md
demo/: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt
src/: CMakeLists.txt  header.hpp  source.cpp
